--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
   "version": 2,
   "functions": {
     "api/index.py": {
-      "runtime": "python3.11",
-      "maxLambdaSize": "50mb"
+      "runtime": "python3.11"
     }
   },
   "routes": [
