Add inactivity auto close workflow

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ APP_BASE_URL=http://localhost:8000
 SECRET_KEY=changeme
 SESSION_COOKIE_NAME=chatbot_session
 SESSION_EXPIRE_MINUTES=1440
+CHAT_INACTIVITY_WARNING_SECONDS=70
+CHAT_INACTIVITY_GRACE_SECONDS=60
 OPENAI_CHAT_MODEL=gpt-4o-mini
 OPENAI_EMBEDDING_MODEL=text-embedding-3-large
 SMTP_HOST=smtp.example.com
