Add smoke test and update env settings

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ENV=development
-DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:5432/chatbot
+DATABASE_URL=postgresql+psycopg2://neondb_owner:npg_y63mdSYoENHI@ep-proud-mountain-a477x9cy-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 OPENAI_API_KEY=sk-your-key
 APP_BASE_URL=http://localhost:8000
 SECRET_KEY=changeme
